# asterinas

./: .code-workspace  .gitignore  .licenserc.yaml  CODEOWNERS  COPYRIGHT  Cargo.toml  Components.toml  KSDK.toml  Makefile  OSDK.toml  README.md  README_CN.md  README_JP.md  rust-toolchain.toml  triagebot.toml
docs/: book.toml
kernel/: Cargo.toml
kernel/comps/block/: Cargo.toml
kernel/comps/block/src/: bio.rs  id.rs  impl_block_device.rs  lib.rs  partition.rs  request_queue.rs
kernel/comps/console/: Cargo.toml
kernel/comps/console/src/: lib.rs
kernel/comps/framebuffer/: Cargo.toml
kernel/comps/framebuffer/src/: lib.rs
kernel/comps/input/: Cargo.toml
kernel/comps/input/src/: key.rs  lib.rs
kernel/comps/logger/: Cargo.toml
kernel/comps/logger/src/: astros_logger.rs  console.rs  lib.rs
kernel/comps/mlsdisk/: Cargo.toml
kernel/comps/mlsdisk/src/: lib.rs
kernel/comps/mlsdisk/src/os/: mod.rs
kernel/comps/network/: Cargo.toml
kernel/comps/network/src/: buffer.rs  dma_pool.rs  driver.rs  lib.rs
kernel/comps/nvme/: Cargo.toml
kernel/comps/nvme/src/: nvme_cmd.rs  nvme_queue.rs
kernel/comps/nvme/src/device/: block_device.rs
kernel/comps/softirq/: Cargo.toml
kernel/comps/softirq/src/: lib.rs  taskless.rs
kernel/comps/systree/src/: lib.rs  node.rs  utils.rs
kernel/comps/time/: Cargo.toml
kernel/comps/time/src/: clocksource.rs  lib.rs  tsc.rs
kernel/comps/time/src/rtc/: cmos.rs  goldfish.rs
kernel/comps/virtio/: Cargo.toml
kernel/comps/virtio/src/: dma_buf.rs  lib.rs  queue.rs
kernel/comps/virtio/src/transport/: mod.rs
kernel/libs/astros-bigtcp/: Cargo.toml
kernel/libs/astros-bigtcp/src/: socket_table.rs
kernel/libs/astros-bigtcp/src/iface/: common.rs  time.rs
kernel/libs/astros-bigtcp/src/socket/: bound.rs  unbound.rs
kernel/libs/astros-rights/: Cargo.toml
kernel/libs/astros-rights-proc/: Cargo.toml
kernel/libs/astros-rights-proc/src/: lib.rs
kernel/libs/astros-rights/src/: lib.rs
kernel/libs/astros-util/: Cargo.toml
kernel/libs/astros-util/src/: coeff.rs  dup.rs  lib.rs  safe_ptr.rs  segment_slice.rs  union_read_ptr.rs
kernel/libs/comp-sys/cargo-component/: README.md
kernel/libs/comp-sys/component/: Cargo.toml
kernel/libs/comp-sys/component-macro/src/: priority.rs
kernel/libs/int-to-c-enum/: Cargo.toml
kernel/libs/int-to-c-enum/derive/: Cargo.toml
kernel/libs/typeflags-util/src/: lib.rs
kernel/libs/typeflags/src/: lib.rs
kernel/src/: context.rs  error.rs  kcmdline.rs  lib.rs  prelude.rs  vdso.rs
kernel/src/arch/riscv/: cpu.rs  signal.rs
kernel/src/arch/x86/: cpu.rs  signal.rs
kernel/src/device/: mod.rs  mqueue.rs
kernel/src/device/pty/: pty.rs
kernel/src/device/tdxguest/: mod.rs
kernel/src/device/tty/: driver.rs  line_discipline.rs  mod.rs
kernel/src/driver/: mod.rs
kernel/src/events/: subject.rs
kernel/src/fs/: file_handle.rs  file_table.rs  fs_resolver.rs  mod.rs  pipe.rs  thread_info.rs
kernel/src/fs/cgroupfs/: inode.rs  mod.rs  systree_node.rs
kernel/src/fs/cgroupfs/controller/: cgroup.rs  cpuset.rs  memory.rs  mod.rs  pids.rs  util.rs
kernel/src/fs/configfs/: inode.rs
kernel/src/fs/devpts/: mod.rs  ptmx.rs
kernel/src/fs/epoll/: entry.rs  file.rs
kernel/src/fs/exfat/: bitmap.rs  dentry.rs  fs.rs  inode.rs  mod.rs  super_block.rs  upcase_table.rs
kernel/src/fs/ext2/: block_group.rs  inode.rs  prelude.rs  super_block.rs  xattr.rs
kernel/src/fs/ext2/impl_for_vfs/: fs.rs  inode.rs
kernel/src/fs/fs_impls/cgroupfs/: mod.rs
kernel/src/fs/fs_impls/ext2/: inode.rs
kernel/src/fs/fs_impls/ramfs/: fs.rs
kernel/src/fs/inode_handle/: dyn_cap.rs  mod.rs  static_cap.rs
kernel/src/fs/mqueue/: fs.rs  inode.rs  mod.rs
kernel/src/fs/overlayfs/: fs.rs
kernel/src/fs/path/: dentry.rs  mod.rs  mount.rs
kernel/src/fs/procfs/: cmdline.rs  cpuinfo.rs  meminfo.rs  mod.rs
kernel/src/fs/ramfs/: fs.rs
kernel/src/fs/sysfs/: inode.rs
kernel/src/fs/utils/: access_mode.rs  channel.rs  direntry_vec.rs  flock.rs  id_bitmap.rs  inode.rs  page_cache.rs  systree_inode.rs
kernel/src/net/iface/: ext.rs  init.rs  mod.rs  poll.rs  sched.rs
kernel/src/net/socket/: mod.rs
kernel/src/page_cache/tests/: mod.rs
kernel/src/process/: clone.rs  exit.rs  kill.rs  pid_file.rs  process_filter.rs  task_set.rs
kernel/src/process/credentials/: credentials_.rs  mod.rs  static_cap.rs
kernel/src/process/namespace/: nsproxy.rs
kernel/src/process/posix_thread/: builder.rs  exit.rs  futex.rs  mod.rs  posix_thread_ext.rs  robust_list.rs  thread_local.rs
kernel/src/process/process/: init_proc.rs  job_control.rs  mod.rs  terminal.rs  timer_manager.rs
kernel/src/process/process_vm/: heap.rs  mod.rs
kernel/src/process/signal/: c_types.rs  mod.rs  pause.rs  poll.rs
kernel/src/process/sync/: condvar.rs
kernel/src/sched/: priority_scheduler.rs
kernel/src/sched/sched_class/: fair.rs  idle.rs  mod.rs  policy.rs  real_time.rs  stop.rs  time.rs
kernel/src/sched/stats/: loadavg.rs  scheduler_stats.rs
kernel/src/syscall/: arch_prctl.rs  clone.rs  close.rs  eventfd.rs  execve.rs  fork.rs  getcpu.rs  mmap.rs  mod.rs  mount.rs  nanosleep.rs  pause.rs  prctl.rs  reboot.rs  rt_sigreturn.rs  rt_sigsuspend.rs  sched_affinity.rs  setns.rs  sysinfo.rs  timerfd_settime.rs
kernel/src/syscall/arch/: riscv.rs  x86.rs
kernel/src/thread/: exception.rs  kernel_thread.rs  mod.rs  oops.rs  task.rs
kernel/src/thread/work_queue/: mod.rs  work_item.rs  worker.rs  worker_pool.rs
kernel/src/time/: softirq.rs  system_time.rs  wait.rs
kernel/src/time/clocks/: cpu_clock.rs  system_wide.rs
kernel/src/time/core/: mod.rs  timer.rs
kernel/src/util/: iovec.rs  random.rs  ring_buffer.rs
kernel/src/vm/: mod.rs  perms.rs  util.rs
kernel/src/vm/vmar/: dyn_cap.rs  interval_set.rs  mod.rs  static_cap.rs  vm_mapping.rs
kernel/src/vm/vmo/: dyn_cap.rs  mod.rs  options.rs  pager.rs  static_cap.rs
ksdk/test-kernel/: Cargo.toml
ksdk/test-kernel/src/: path.rs  tree.rs
kstd/libs/kstd-macros/: Cargo.toml
kstd/libs/kstd-macros/src/: lib.rs
kstd/libs/kstd-test/: Cargo.toml
kstd/libs/kstd-test/src/: lib.rs
(+353 files in other folders)
