[workspace]
resolver = "2"
members = [
    "ksdk/deps/frame-allocator",
    "ksdk/deps/heap-allocator",
    "ksdk/deps/test-kernel",
    "kstd",
    "kstd/libs/align_ext",
    "kstd/libs/kstd-macros",
    "kstd/libs/id-alloc",
    "kstd/libs/linux-bzimage/builder",
    "kstd/libs/linux-bzimage/boot-params",
    "kstd/libs/linux-bzimage/setup",
    "kstd/libs/kstd-test",
    "kernel",
    "kernel/comps/block",
    "kernel/comps/console",
    "kernel/comps/framebuffer",
    "kernel/comps/input",
    "kernel/comps/network",
    "kernel/comps/softirq",
    "kernel/comps/logger",
    "kernel/comps/mlsdisk",
    "kernel/comps/time",
    "kernel/comps/virtio",
    "kernel/comps/nvme",
    "kernel/libs/cpio-decoder",
    "kernel/libs/int-to-c-enum",
    "kernel/libs/int-to-c-enum/derive",
    "kernel/libs/astros-rights",
    "kernel/libs/astros-rights-proc",
    "kernel/libs/astros-util",
    "kernel/libs/astros-bigtcp",
    "kernel/libs/jhash",
    "kernel/libs/keyable-arc",
    "kernel/libs/typeflags",
    "kernel/libs/typeflags-util",
    "kernel/libs/atomic-integer-wrapper",
]
exclude = [
    "kernel/libs/comp-sys/cargo-component",
    "kernel/libs/comp-sys/component",
    "kernel/libs/comp-sys/component-macro",
    "kernel/libs/comp-sys/controlled",
    "ksdk",
]

[workspace.lints.clippy]
allow_attributes = "warn"

# Cargo only looks at the profile settings 
# in the Cargo.toml manifest at the root of the workspace

[profile.dev]
panic = "unwind"

[profile.release]
lto = "thin"
panic = "unwind"

# Release profile configuration with Link Time Optimization (LTO) enabled.
#
# This profile is optimized for maximum runtime performance, 
# (achieving a 2% reduction in latency for the getpid system call).
# However, enabling LTO significantly increases compilation times,
# approximately doubling them compared to when LTO is not enabled.
[profile.release-lto]
inherits = "release"
lto = true
# lto can only be enabled when panic strategy is abort
panic = "abort"
# set codegen-units as the smallest number
codegen-units = 1
