[package]
name = "astros-nix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
align_ext = { path = "../kstd/libs/align_ext" }
astros-input = { path = "comps/input" }
astros-block = { path = "comps/block" }
astros-network = { path = "comps/network" }
astros-console = { path = "comps/console" }
astros-softirq = { path = "comps/softirq" }
astros-logger = { path = "comps/logger" }
astros-mlsdisk = { path = "comps/mlsdisk" }
astros-time = { path = "comps/time" }
astros-virtio = { path = "comps/virtio" }
astros-nvme = { path = "comps/nvme" }
astros-rights = { path = "libs/astros-rights" }
component = { path = "libs/comp-sys/component" }
controlled = { path = "libs/comp-sys/controlled" }
ksdk-frame-allocator = { path = "../ksdk/deps/frame-allocator" }
ksdk-heap-allocator = { path = "../ksdk/deps/heap-allocator" }
kstd = { path = "../kstd" }
typeflags = { path = "libs/typeflags" }
typeflags-util = { path = "libs/typeflags-util" }
astros-rights-proc = { path = "libs/astros-rights-proc" }
astros-util = { path = "libs/astros-util" }
astros-bigtcp = { path = "libs/astros-bigtcp" }
atomic-integer-wrapper = { path = "libs/atomic-integer-wrapper" }
id-alloc = { path = "../kstd/libs/id-alloc" }
int-to-c-enum = { path = "libs/int-to-c-enum" }
cpio-decoder = { path = "libs/cpio-decoder" }
intrusive-collections = "0.9.5"
paste = "1.0"
time = { version = "0.3", default-features = false, features = ["alloc"] }
tdx-guest = { version = "0.2.1", optional = true }

# parse elf file
xmas-elf = "0.8.0"
# data-structures
bitflags = "1.3"
keyable-arc = { path = "libs/keyable-arc" }
# unzip initramfs
libflate = { version = "2", default-features = false }
core2 = { version = "0.4", default-features = false, features = ["alloc"] }
lending-iterator = "0.1.7"
spin = "0.9.4"
lru = "0.12.3"
log = "0.4"
bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
hashbrown = "0.14"
rand = { version = "0.8.5", default-features = false, features = [
    "small_rng",
    "std_rng",
] }
inherit-methods-macro = { git = "https://github.com/astros/inherit-methods-macro", rev = "98f7e3e" }
getset = "0.1.2"
takeable = "0.2.2"
cfg-if = "1.0"
# Fixed point numbers
# TODO: fork this crate to rewrite all the (unnecessary) unsafe usage
fixed = "1.28.0"

[target.riscv64gc-unknown-none-elf.dependencies]
riscv = { version = "0.11.1", features = ["s-mode"] }

[features]
all = ["cvm_guest"]

cvm_guest = ["dep:tdx-guest", "kstd/cvm_guest"]

[lints]
workspace = true
