[package]
name = "ksdk-test-kernel"
version = "0.11.1"
edition = "2021"
description = "The KSTD-based kernel for running unit tests with KSDK."
license = "MPL-2.0"
repository ="https://github.com/astros/astros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kstd = { version = "0.11.1", path = "../../kstd" }
owo-colors = "4.0.0"
