[package]
name = "astros-block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
spin = "0.9.4"
kstd = { path = "../../../kstd" }
align_ext = { path = "../../../kstd/libs/align_ext" }
astros-util = { path = "../../libs/astros-util" }
int-to-c-enum = { path = "../../libs/int-to-c-enum" }
component = { path = "../../libs/comp-sys/component" }
log = "0.4"
static_assertions = "1.1.0"
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }

[features]
