[package]
name = "astros-input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
spin = "0.9.4"
kstd = { path = "../../../kstd" }
astros-util = { path = "../../libs/astros-util" }
astros-rights = { path = "../../libs/astros-rights" }
component = { path = "../../libs/comp-sys/component" }
int-to-c-enum = { path = "../../libs/int-to-c-enum" }
log = "0.4"
ascii = { version = "1.1", default-features = false, features = ["alloc"] }

[features]
