[package]
name = "astros-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
component = { path = "../../libs/comp-sys/component" }
astros-console = { path = "../console" }
astros-virtio = { path = "../virtio" }
log = "0.4"
kstd = { path = "../../../kstd" }
spin = "0.9.4"
owo-colors = { version = "3", optional = true }
cfg-if = "1.0"

[features]
default = ["log_color"]
log_color = ["dep:owo-colors"]
