[package]
name = "astros-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
component = { path = "../../libs/comp-sys/component" }
astros-console = { path = "../console" }
log = "0.4"
kstd = { path = "../../../kstd" }
owo-colors = { version = "3", optional = true }

[features]
default = ["log_color"]
log_color = ["dep:owo-colors"]

[lints]
workspace = true
