[package]
name = "astros-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
align_ext = { path = "../../../kstd/libs/align_ext" }
astros-util = { path = "../../libs/astros-util" }
astros-rights = { path = "../../libs/astros-rights" }
astros-bigtcp = { path = "../../libs/astros-bigtcp" }
bitflags = "1.3"
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
component = { path = "../../libs/comp-sys/component" }
int-to-c-enum = { path = "../../libs/int-to-c-enum" }
log = "0.4"
kstd = { path = "../../../kstd" }
spin = "0.9.4"
