[package]
name = "astros-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astros-bigtcp = { path = "../../libs/astros-bigtcp" }
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
component = { path = "../../libs/comp-sys/component" }
kstd = { path = "../../../kstd" }
spin = "0.9.4"

[lints]
workspace = true
