[package]
name = "astros-nvme"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "1.3"
spin = "0.9.4"
bytes = { version = "1.4.0", default-features = false }
align_ext = { path = "../../../kstd/libs/align_ext" }
astros-util = { path = "../../libs/astros-util" }
astros-rights = { path = "../../libs/astros-rights" }
astros-bigtcp = { path = "../../libs/astros-bigtcp" }
id-alloc = { path = "../../../kstd/libs/id-alloc" }
typeflags-util = { path = "../../libs/typeflags-util" }
kstd = { path = "../../../kstd" }
component = { path = "../../libs/comp-sys/component" }
log = "0.4"
bit_field = "0.10.1"
int-to-c-enum = { path = "../../libs/int-to-c-enum" }
astros-block = { path = "../block" }
