[package]
name = "astros-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kstd = { path = "../../../kstd" }
astros-util = { path = "../../libs/astros-util" }
component = { path = "../../libs/comp-sys/component" }
log = "0.4"
spin = "0.9.4"

[target.riscv64gc-unknown-none-elf.dependencies]
chrono = { version = "0.4.38", default-features = false }

[lints]
workspace = true
