[package]
name = "astros-virtio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
spin = "0.9.4"
astros-input = { path = "../input" }
astros-block = { path = "../block" }
astros-network = { path = "../network" }
astros-console = { path = "../console" }
astros-util = { path = "../../libs/astros-util" }
astros-rights = { path = "../../libs/astros-rights" }
astros-bigtcp = { path = "../../libs/astros-bigtcp" }
id-alloc = { path = "../../../kstd/libs/id-alloc" }
typeflags-util = { path = "../../libs/typeflags-util" }
kstd = { path = "../../../kstd" }
component = { path = "../../libs/comp-sys/component" }
log = "0.4"
int-to-c-enum = { path = "../../libs/int-to-c-enum" }
tinybmp = "0.3.1"
embedded-graphics = "0.7.1"

[lints]
workspace = true
