[package]
name = "kstd-macros"
version = "0.14.1"
edition = "2021"
description = "KSTD's proc macros"
license = "MPL-2.0"
repository ="https://github.com/astros/astros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
rand = "0.8.5"
syn = { version = "2.0.48", features = ["full"] }

[lints]
workspace = true
