[package]
name = "kstd-test"
version = "0.14.1"
edition = "2021"
description = "The kernel mode unit testing framework of KSTD"
license = "MPL-2.0"
repository ="https://github.com/astros/astros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lints]
workspace = true
